# backstage-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PROJECT_STATE.md  README.md  TODO.md  backstage_agent.sqlite3.backup-before-2026-07-03-delete  backstage_agent.sqlite3.backup-before-2026-07-03-reviewer-rerun  backstage_agent.sqlite3.backup-before-2026-07-06-delete  backstage_agent.sqlite3.backup-before-20260709-rescan-154541  backstage_agent.sqlite3.backup-before-20260709-two-layer-rescan-20260709-162720  backstage_agent.sqlite3.backup-before-key-cleanup  backstage_agent.sqlite3.backup-before-major-whiskey-location-backfill  backstage_agent.sqlite3.backup-before-sierra-reeval  profile.example.json  profile.json  pyproject.toml  scoring_rules.json  screening_rules.json
docs/: module-guide.md
launchd/: com.sarahtxy.backstage-agent.daily.plist  com.sarahtxy.backstage-agent.ui.plist
scripts/: daily_scan.sh  ensure_dashboard.sh  rescore_stored_date.py
tests/: conftest.py  test_agent_candidate_scoring.py  test_agent_review_gate.py  test_application.py  test_calibration.py  test_candidate_generation.py  test_candidate_models.py  test_candidate_scoring.py  test_candidate_storage.py  test_cli_candidates.py  test_cli_summary.py  test_daily_scan_script.py  test_decision_core.py  test_email_client.py  test_feature_extractor.py  test_parser.py  test_project_page_parser.py  test_project_screener.py  test_requirement_matcher.py  test_screener.py  test_screening_preferences.py  test_storage_dashboard.py  test_structured_reviewer.py  test_ui_candidates.py  (+2 more)
(+48 files in other folders)
