[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "backstage-agent"
version = "0.1.0"
description = "Local Backstage casting candidate scoring and ranking agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "openai>=1.0.0",
  "playwright>=1.45.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
backstage-agent = "backstage_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
backstage_agent = ["scoring_rules.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
